--- a/src/app/pages/detalhes-produtos/detalhes-produtos.page.html
+++ b/src/app/pages/detalhes-produtos/detalhes-produtos.page.html
@@ -7,4 +7,6 @@
 <ion-content>
     <ion-item>{{dados.nome}}</ion-item>
     <ion-item>{{dados.valor}}</ion-item>
+
+    <ion-back-button defaultHref="home"></ion-back-button>
 </ion-content>
