--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
         <ion-title>
-            Produtos
+            Oficina
         </ion-title>
     </ion-toolbar>
 </ion-header>
@@ -9,12 +9,13 @@
 <ion-content [fullscreen]="true">
     <ion-header collapse="condense">
         <ion-toolbar>
-            <ion-title size="large">Produtos</ion-title>
+            <ion-title size="large">Oficina</ion-title>
         </ion-toolbar>
     </ion-header>
 
-    <ion-label> {(TipoServicoService)}</ion-label>
-    <div id="container">
+    <ion-button class="butao" routerLink="/listagem-produtos">Produtos</ion-button>
+    <ion-button class="butao" routerLink="servico">Serviços</ion-button>
 
-    </div>
+
+
 </ion-content>
